src/test/deca/syntax/invalid/sansobjet/DeclaMotReserve.deca
//DeclaMotReserve.deca:5:8: no viable alternative at input 'asm'
//Description: teste declaration incorrect nombre
//Resultats: erreur ligne 5: caractere speciaux  a la place d'in ident
{
    int asm;
}
